--- a/admin/index.html
+++ b/admin/index.html
@@ -64,6 +64,10 @@
                         class="tab-button border-b-2 border-transparent py-4 px-1 text-gray-500 hover:text-gray-700 hover:border-gray-300 font-medium">
                     チェックイン一覧
                 </button>
+                <button onclick="showTab('reflections')"
+                        class="tab-button border-b-2 border-transparent py-4 px-1 text-gray-500 hover:text-gray-700 hover:border-gray-300 font-medium">
+                    振り返り一覧
+                </button>
             </nav>
         </div>
 
@@ -164,6 +168,30 @@
                     </button>
                     <span id="checkinsPageInfo" class="text-sm text-gray-600">ページ 1</span>
                     <button id="checkinsNext" onclick="nextCheckinsPage()" class="px-4 py-2 bg-gray-200 text-gray-700 rounded hover:bg-gray-300 disabled:opacity-50 disabled:cursor-not-allowed">
+                        次へ →
+                    </button>
+                </div>
+            </div>
+        </div>
+
+        <!-- 振り返り一覧 -->
+        <div id="reflectionsTab" class="tab-content hidden">
+            <div class="bg-white rounded-lg shadow overflow-hidden">
+                <div class="px-6 py-4 border-b border-gray-200 flex justify-between items-center">
+                    <h2 class="text-lg font-semibold">振り返り一覧</h2>
+                    <button onclick="loadReflections()" class="text-blue-500 hover:text-blue-600">
+                        🔄 更新
+                    </button>
+                </div>
+                <div id="reflectionsList" class="overflow-x-auto">
+                    <div class="text-center py-8 text-gray-500">読み込み中...</div>
+                </div>
+                <div class="px-6 py-4 border-t border-gray-200 flex justify-between items-center">
+                    <button id="reflectionsPrev" onclick="prevReflectionsPage()" class="px-4 py-2 bg-gray-200 text-gray-700 rounded hover:bg-gray-300 disabled:opacity-50 disabled:cursor-not-allowed">
+                        ← 前へ
+                    </button>
+                    <span id="reflectionsPageInfo" class="text-sm text-gray-600">ページ 1</span>
+                    <button id="reflectionsNext" onclick="nextReflectionsPage()" class="px-4 py-2 bg-gray-200 text-gray-700 rounded hover:bg-gray-300 disabled:opacity-50 disabled:cursor-not-allowed">
                         次へ →
                     </button>
                 </div>
