--- a/admin/index.html
+++ b/admin/index.html
@@ -200,6 +200,6 @@
     </div>
 
     <script src="config.js"></script>
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
 </body>
 </html>
